--- a/css/responsive.css
+++ b/css/responsive.css
@@ -27,10 +27,22 @@
         margin: 20px 0;
     }
 
+    .steps {
+        margin: 0;
+    }
+
     .why-us .col-left,
     .why-us .col-right {
         width: 80%;
         margin: 20px 0;
     }
+
+    .why-us {
+        background-color: black;
+        margin-bottom: 0;
+        padding-top: 50px;
+    }
+
+
 
 }
